@@ -1974,6 +1974,7 @@ class QCircuit : public IDisplay, public IJSON {
                    idx shift = 0, std::string name = {}) {
         // EXCEPTION CHECKS
 
+        idx D = static_cast<idx>(std::llround(std::pow(d_, target.size())));
         try {
             // check valid ctrl
             if (ctrl >= nq_)
@@ -2005,7 +2006,7 @@ class QCircuit : public IDisplay, public IJSON {
             if (!internal::check_square_mat(U))
                 throw exception::MatrixNotSquare("qpp::QCircuit::CTRL()");
             // check correct dimension
-            if (static_cast<idx>(U.rows()) != d_)
+            if (static_cast<idx>(U.rows()) != D)
                 throw exception::DimsMismatchMatrix("qpp::QCircuit::CTRL()");
 
             // check shift
@@ -2142,6 +2143,7 @@ class QCircuit : public IDisplay, public IJSON {
                    const std::vector<idx>& shift = {}, std::string name = {}) {
         // EXCEPTION CHECKS
 
+        idx D = static_cast<idx>(std::llround(std::pow(d_, target.size())));
         try {
             // check valid ctrl
             for (auto&& elem : ctrl) {
@@ -2181,7 +2183,7 @@ class QCircuit : public IDisplay, public IJSON {
             if (!internal::check_square_mat(U))
                 throw exception::MatrixNotSquare("qpp::QCircuit::CTRL()");
             // check correct dimension
-            if (static_cast<idx>(U.rows()) != d_)
+            if (static_cast<idx>(U.rows()) != D)
                 throw exception::DimsMismatchMatrix("qpp::QCircuit::CTRL()");
 
             // check shift
@@ -2241,9 +2243,7 @@ class QCircuit : public IDisplay, public IJSON {
                           std::string name = {}) {
         // EXCEPTION CHECKS
 
-        idx n = static_cast<idx>(target.size());
-        idx D = static_cast<idx>(std::llround(std::pow(d_, n)));
-
+        idx D = static_cast<idx>(std::llround(std::pow(d_, target.size())));
         try {
             // check valid ctrl
             for (auto&& elem : ctrl) {
@@ -2400,6 +2400,7 @@ class QCircuit : public IDisplay, public IJSON {
                     idx shift = 0, std::string name = {}) {
         // EXCEPTION CHECKS
 
+        idx D = static_cast<idx>(std::llround(std::pow(d_, target.size())));
         try {
             // check valid ctrl_dit
             if (ctrl_dit >= nc_)
@@ -2424,7 +2425,7 @@ class QCircuit : public IDisplay, public IJSON {
             if (!internal::check_square_mat(U))
                 throw exception::MatrixNotSquare("qpp::QCircuit::cCTRL()");
             // check correct dimension
-            if (static_cast<idx>(U.rows()) != d_)
+            if (static_cast<idx>(U.rows()) != D)
                 throw exception::DimsMismatchMatrix("qpp::QCircuit::cCTRL()");
 
             // check shift
@@ -2556,6 +2557,7 @@ class QCircuit : public IDisplay, public IJSON {
                     const std::vector<idx>& shift = {}, std::string name = {}) {
         // EXCEPTION CHECKS
 
+        idx D = static_cast<idx>(std::llround(std::pow(d_, target.size())));
         try {
             // check valid ctrl_dits
             for (auto&& elem : ctrl_dits) {
@@ -2585,7 +2587,7 @@ class QCircuit : public IDisplay, public IJSON {
             if (!internal::check_square_mat(U))
                 throw exception::MatrixNotSquare("qpp::QCircuit::cCTRL()");
             // check correct dimension
-            if (static_cast<idx>(U.rows()) != d_)
+            if (static_cast<idx>(U.rows()) != D)
                 throw exception::DimsMismatchMatrix("qpp::QCircuit::cCTRL()");
 
             // check shift
@@ -2645,9 +2647,7 @@ class QCircuit : public IDisplay, public IJSON {
                            std::string name = {}) {
         // EXCEPTION CHECKS
 
-        idx n = static_cast<idx>(target.size());
-        idx D = static_cast<idx>(std::llround(std::pow(d_, n)));
-
+        idx D = static_cast<idx>(std::llround(std::pow(d_, target.size())));
         try {
             // check valid ctrl_dits
             for (auto&& elem : ctrl_dits) {
